webapp1/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mywebapp
  name: mywebapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mywebapp
  template:
    metadata:
      labels:
        app: mywebapp
    spec:
      containers:
      - image: yahyaalshamrani/mywebapp:v0.1
        name: mywebapp
        ports:
        - containerPort: 8080
