webapp1/service.yaml
# service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mywebapp
  name: mywebapp
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: mywebapp
